[package]
name = "hft-passive-mm"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio   = { version = "1.38", features = ["full"] }
serde   = { version = "1.0",  features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand    = "0.9"
anyhow = "1.0.98"
