[package]
name = "hft-triarb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { version = "1.38", features = ["full"] }
serde              = { version = "1.0", features = ["derive"] }
figment            = { version = "0.10", features = ["toml", "env"] }
rand               = "0.8"
anyhow             = "1.0"
tracing            = "0.1"
tracing-subscriber = "0.3"
